[package]
name = "csl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csl"
path = "src/lib.rs"

[dependencies]
bytemuck = "1"
glfw = "0.55.0"
imagine = "0.0.5"
gl = "0.14.0"
glam = "0.25.0"
log = "0.4.21"
env_logger = "0.11.3"
