workspace = { members = ["lib/gl"] }
[package]
name = "csl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csl"
path = "src/lib.rs"

[dependencies]
bytemuck = "1"
imagine = "0.0.5"

glfw = {version = "0.55.0", optional = true}
gl = { path = "lib/gl", optional = true}
glam = "0.25.0"
log = "0.4.21"
env_logger = "0.11.3"

[features]
default = ["plotting"]
plotting = ["dep:glfw", "dep:gl"]